# whisperx-jetson

./: .gitignore  .gitmodules  LICENSE  README.md  build_ctranslate2_cuda.sh  install_jetson.sh  install_jetson_onnxruntime.sh  pyproject.toml  setup_tensorrt_llm.sh  setup_venv.sh
whisper_trtllm/: PATCH_NOTES.md  README.md  build.sh  build_base_en_example.sh  build_small_en_example.sh  convert_checkpoint.py  requirements.txt  run.py  run.sh  whisper_utils.py
whisperjet/: SubtitlesProcessor.py  __init__.py  __main__.py  alignment.py  asr.py  audio.py  diarize.py  realtime.py  transcribe.py
whisperjet/vads/: __init__.py  pyannote.py  silero.py
whisperx/: realtime.py
whisperx/vads/: pyannote.py
