[project]
name = "whisperjet"
version = "1.0.0"
description = "High-performance realtime speech recognition for NVIDIA Jetson with dual-backend support (CTranslate2 + TensorRT-LLM)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Rhys Williams", email = "rhysdgwilliams@gmail.com" },
]

[project.urls]
Repository = "https://github.com/rhysdg/mr-b/tree/main/whisperx-jetson"
Homepage = "https://github.com/rhysdg/mr-b"

# Dependencies are intentionally minimal - use install scripts for full setup:
#   1. setup_tensorrt_llm.sh - PyTorch, TensorRT-LLM
#   2. setup_venv.sh - virtualenv with CUDA symlinks
#   3. install_jetson.sh - CTranslate2 backend deps
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
whisperjet = "whisperjet.__main__:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperjet*"]
